Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="line"></div>
       </div>
       <ul class="navlinks">
-        <li><a class="links" href="home.html">Home</a></li>
+        <li><a class="links" href="index.html">Home</a></li>
         <li><a class="links" href="about.html">About us</a></li>
         <li><a class="links" href="donate.html">Donate</a></li>
         <li><a class="links" href="#Footer">Contact us</a></li>
